@@ -1,3 +1,10 @@
+FrostWire 2.6.7 build 718 - APR/29/2023
+ - python:websockets-11.0.2
+ - androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1
+ - removed androidx.lifecycle:lifecycle-viewmodel
+ - com.google.firebase:firebase-crashlytics-gradle:2.9.5
+
+
 FrostWire 2.6.6 build 717 - MAR/31/2023
  - PLUS-ONLY: New video search source
  - SoundCloud search fixed
